Fix padding around the create-update container to align with the navbar.

--- a/scss/partials/_create_update.scss
+++ b/scss/partials/_create_update.scss
@@ -7,7 +7,7 @@ div.create-update {
 
     div.create-update-content {
       margin: 58px auto 10px;
-      padding: 0 30px;
+      padding: 0 34px;
 
       div.create-update-content-cards {
         padding-right: 10px;
